--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
 		"@types/node": "18.11.15",
 		"@types/react": "18.0.26",
 		"@types/react-dom": "18.0.9",
+		"ethers": "^5.7.2",
 		"next": "13.0.6",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-toastify": "^9.1.1",
 		"styled-components": "^5.3.6",
-		"typescript": "4.9.4"
+		"typescript": "4.9.4",
+		"web3": "^1.8.1"
 	},
 	"devDependencies": {
 		"@types/styled-components": "^5.1.26",
