Revert "tachar_todo_app_todo"
This reverts commit bc94a9244d3c8bafff0fa384f580db780cf16761.

--- a/.env
+++ b/.env
@@ -3,19 +3,27 @@ NEXT_PUBLIC_BASE_API_VERSION="v1"
 # contract owner 0xeA05fC04b6e1E9e02993bbe831e02aAD27546f4e @Dev Alirio Angel. Si necesitan 
 # algun tipo de ayuda o values avisenme.
 
-NEXT_PUBLIC_BASE_API_URL="https://ws-mtf.metafounders.com/api"
-NEXT_PUBLIC_BASE_TRANSACTION_API_URL="https://ws-transaction.metafounders.com/api"
-NEXT_PUBLIC_METAFOUNDERS_CHAIN_ID=56
-NEXT_PUBLIC_METAFOUNDERS_RPC_PROVIDER="https://bsc-dataseed1.binance.org"
-NEXT_PUBLIC_SERVICE_PASSWORD=passMeta
-NEXT_PUBLIC_SERVICE_USER=rootMeta
-
 #Contratos
-NEXT_PUBLIC_LANDIAN_LANDER_ADDRESS='0xeA05fC04b6e1E9e02993bbe831e02aAD27546f4e'
-NEXT_PUBLIC_LANDIAN_LANDS_CONTRACT='0x03935303C688c8b4a4e3426Fb15AC36a585cf576'
-NEXT_PUBLIC_METAFOUNDERS_BUSD_CONTRACT='0x86F6Cb8070DDA84e15Be79f105aCC89f4Da61290'
-NEXT_PUBLIC_METAFOUNDERS_MEGA_PROJECT='0xa34e984Be7657066924cf3C9d1eBEDeaE43a51e2'
-NEXT_PUBLIC_METAFOUNDERS_META_TOKENS='0xD5c22859D6CD6B713cf53107Ca524F78d8F30187'
-NEXT_PUBLIC_METAFOUNDERS_NFT_CONTRACT='0xFE69865276198dD4bB2D5726ff2131908768Dac2'
-NEXT_PUBLIC_METAFOUNDERS_PAYMENT_CONTRACT='0x682ac63bF73F7a9B1a657e9e80F6A1D48F1a1925'
-NEXT_PUBLIC_METAFOUNDERS_USDT_CONTRACT='0x84B5944fE3E41cB8397ec5b499F9fc9Ed90d3f04'
+NEXT_PUBLIC_METAFOUNDERS_PAYMENT_CONTRACT="0x682ac63bF73F7a9B1a657e9e80F6A1D48F1a1925"
+NEXT_PUBLIC_METAFOUNDERS_NFT_CONTRACT="0xFE69865276198dD4bB2D5726ff2131908768Dac2"
+NEXT_PUBLIC_METAFOUNDERS_MEGA_PROJECT="0xa34e984Be7657066924cf3C9d1eBEDeaE43a51e2"
+NEXT_PUBLIC_METAFOUNDERS_META_TOKENS="0xD5c22859D6CD6B713cf53107Ca524F78d8F30187"
+NEXT_PUBLIC_METAFOUNDERS_USDT_CONTRACT="0x84B5944fE3E41cB8397ec5b499F9fc9Ed90d3f04"
+NEXT_PUBLIC_METAFOUNDERS_BUSD_CONTRACT="0x86F6Cb8070DDA84e15Be79f105aCC89f4Da61290"
+NEXT_PUBLIC_LANDIAN_LANDS_CONTRACT="0x03935303C688c8b4a4e3426Fb15AC36a585cf576"
+NEXT_PUBLIC_LANDIAN_LANDER_ADDRESS="0xeA05fC04b6e1E9e02993bbe831e02aAD27546f4e"
+
+NEXT_PUBLIC_BASE_TRANSACTION_API_URL="https://ws-mtf-transaction.metafounders.vip/api"
+NEXT_PUBLIC_METAFOUNDERS_MEGA_PROJECT="0x2bE61494947e25ad495209a47B2cdddb065a356A"
+NEXT_PUBLIC_BASE_API_URL="https://ws-mtf.metafounders.vip/api"
+NEXT_PUBLIC_METAFOUNDERS_PAYMENT_CONTRACT="0xF65e5f97e58379B843Ea903C50CAfdeAa257a3A9"
+NEXT_PUBLIC_METAFOUNDERS_RPC_PROVIDER="https://bsc-dataseed1.binance.org"
+NEXT_PUBLIC_LANDIAN_LANDER_ADDRESS="0x033C92dA2bD227c0619920884A24a28a7cA8B0ef"
+NEXT_PUBLIC_SERVICE_USER=rootMeta
+NEXT_PUBLIC_SERVICE_PASSWORD=passMeta
+NEXT_PUBLIC_METAFOUNDERS_NFT_CONTRACT="0xA6baD844228b11cF303A3eB9f6aC7fce68E234e4"
+NEXT_PUBLIC_METAFOUNDERS_USDT_CONTRACT="0x55d398326f99059fF775485246999027B3197955"
+NEXT_PUBLIC_LANDIAN_LANDS_CONTRACT="0x5b90785366106E8368b6877BdA19f57F0d94251C"
+NEXT_PUBLIC_METAFOUNDERS_BUSD_CONTRACT="0xe9e7CEA3DedcA5984780Bafc599bD69ADd087D56"
+NEXT_PUBLIC_METAFOUNDERS_META_TOKENS="0x7a96C159d1531627431CB6ACD6427A94f15DCC4d"
+NEXT_PUBLIC_METAFOUNDERS_CHAIN_ID=56
